--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -1,4 +1,3 @@
-
 $bg_color : #FAF8EF;
 $li_size : 16px;
 
@@ -37,9 +36,12 @@ body {
 .description {
     font-size: 12px;
     color: #BBADA0;
-    width: 100px;
+    width: 130px;
     margin-top: 8px;
     margin-bottom: 8px;
+    dd {
+        margin: 0px;
+    }
 }
 
 .cal-table::after {
@@ -47,6 +49,7 @@ body {
     content: '';
     display: block;
 }
+
 
 ul {
     width: 100%;
@@ -67,7 +70,7 @@ li {
     font-size: 12px;
     text-align: center;
     line-height: 18px;
-    color: white;
+    color: #776E65;
 }
 
 .li-blank-true {
@@ -76,18 +79,17 @@ li {
 
 .li-heighlight-true {
     background: #BE2E36;
+    color: white;
 }
 
-.li-predict {
+.li-predict, .confirm-false {
     background: #E78D93;
 }
 
-.current-date-false {
-    color: #776E65;
+.today-true {
     margin: -1px;
-    border: 2px solid;
+    border: #776E65 2px solid;
     border-radius: 3px;
-    position: relative;
 }
 
 @media only screen and (min-device-width : 320px) and (max-device-width : 374px) {
