--- a/src/css/style.scss
+++ b/src/css/style.scss
@@ -17,6 +17,16 @@ body {
     margin-top: 65px;
     margin-bottom: 65px;
     color: #776E65;
+
+    .prefix {
+        font-size: 20px;
+        display: block;
+        color: #a2998f;
+    }
+
+    .distance {
+        display: block;
+    }
 }
 
 .calender {
